--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -51,6 +51,15 @@
     <mat-checkbox color="primary" required ngModel name="agree"
       >agree to terms and conditions</mat-checkbox
     >
-    <button [disabled]="!f.valid" type="submit" mat-raised-button color="primary">Submit</button>
+    <button
+      *ngIf="!isLoading"
+      [disabled]="!f.valid"
+      type="submit"
+      mat-raised-button
+      color="primary"
+    >
+      Submit
+    </button>
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
   </form>
 </section>
