--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -7,16 +7,16 @@
   <div><a routerLink="/">NG fitness</a></div>
   <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
     <ul fxLayout fxLayoutGap="10px" class="navigation-items">
-      <li *ngIf="!isAuth">
+      <li *ngIf="!(isAuth$ | async)">
         <a routerLink="/signup">signup</a>
       </li>
-      <li *ngIf="!isAuth">
+      <li *ngIf="!(isAuth$ | async)">
         <a routerLink="/login">login</a>
       </li>
-      <li *ngIf="isAuth">
+      <li *ngIf="isAuth$ | async">
         <a routerLink="/training">training</a>
       </li>
-      <li *ngIf="isAuth"><a (click)="onLogout()">Logout</a></li>
+      <li *ngIf="isAuth$ | async"><a (click)="onLogout()">Logout</a></li>
     </ul>
   </div>
 </mat-toolbar>
