--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -3,19 +3,19 @@
     <mat-card fxFlex.xs="100%" fxFlex="400px" fxLayout="column" fxLayoutAlign="center center">
       <mat-card-title>Time to start a workout</mat-card-title>
       <mat-card-content>
-        <mat-form-field *ngIf="!isLoading && exercises">
+        <mat-form-field *ngIf="!(isLoading && exercises$ | async)">
           <mat-select placeholder="choose exercise" ngModel name="exercise" required>
-            <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
+            <mat-option *ngFor="let exercise of exercises$ | async" [value]="exercise.id">
               {{ exercise.name }}
             </mat-option>
           </mat-select>
         </mat-form-field>
         <mat-spinner *ngIf="isLoading"></mat-spinner>
         <mat-card-actions *ngIf="!isLoading">
-          <button *ngIf="exercises" mat-button type="submit" [disabled]="f.invalid">
+          <button *ngIf="exercises$ | async" mat-button type="submit" [disabled]="f.invalid">
             Start
           </button>
-          <button *ngIf="!exercises" type="button" mat-button (click)="fetchExercises()">
+          <button *ngIf="!(exercises$ | async)" type="button" mat-button (click)="fetchExercises()">
             Fetch Again
           </button>
         </mat-card-actions>
